# docs/swagger.yaml
@@ -21,8 +21,6 @@ definitions:
     type: object
   entity.Subscription:
     properties:
-      created_at:
-        type: string
       end_date:
         type: string
       id:
@@ -32,8 +30,6 @@ definitions:
       service_name:
         type: string
       start_date:
-        type: string
-      updated_at:
         type: string
       user_id:
         type: string
